--- a/Axa00_catalogue/src/main/resources/application.properties
+++ b/Axa00_catalogue/src/main/resources/application.properties
@@ -7,8 +7,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+springdoc.show-actuator=true
 management.endpoints.web.exposure.include=*
+
 
 management.trace.http.include=remote-address,session-id
 server.port=8012
+
+
+spring.data.rest.basePath=/api
